Fixed URIs in SearchController, changed Arrays.asList() to List.of()